Fixed mobile menu by removing extra margin

--- a/index.css
+++ b/index.css
@@ -696,6 +696,7 @@ footer {
     
     .nav-links.active {
         right: 0;
+        margin:0;
     }
     
     .hamburger.active .line:nth-child(1) {
